IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
3/20/12: In eTomo - Final Aligned Stack, fixed a bug where the erase beads
"diameter to erase" value was not being binned.

3/19/12: In eTomo getting EXCLUDELIST for tilt.com from align.log when
possible.(Bug# 1407)

3/19/12: Fixed problem running new etomo script on cygwin with python 2.5.

3/19/12: Made eTomo remember whether the project log was visible when a
dataset was last opened.  Fixed some PEET bugs: "Manual cylinder orientation"
was not set correctly when the .prm file was copied, maskModelPts must never
contain a "NaN or a single value, pressing "Run" when a process was already
running caused the .com files to be deleted.(Bug# 1605)

3/16/12: In eTomo added an interface for running gputilttest to the Tools
menu.(Bug# 1525)

3/16/12: IMOD_4-4-9

3/16/12: Image display in model view: fixed crash from using new black/white
button with data loaded as integers; fixed problems if model view is closed
and reopened; image display state is now retained if model view reopened.

3/16/12: In eTomo - PEET, popping up an error message when the PEET
installation is not compatible with the current IMOD version.(Bug# 1597)

3/15/12: IMOD_4-4-8
3/15/12: Fixed what installer puts in bash.bashrc in Ubuntu.

3/15/12: In eTomo - PEET, when copying a dataset, removing any process data
that came form the source dataset.(Bug# 1603)

3/12/12: Made it possible to delete all labels in Alterheader.

3/12/12: Made Processchunks exit properly when sync chunk fails on a queue.

3/11/12: Added -F to Tif2mrc to set fill value for images smaller than the
output.

3/10/12: Fixed image drawing in model view for ATI cards, which were horribly
slow (at least in Windows) from changes in 4.2.24; made drawing somewhat more
efficient; added button to set black/white levels from 3dmod sliders.

3/8/12: Added nearest neighbor (non)interpolation to Newstack for linear and
warping transformations.
